# nrf_blinky

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt
cmake/: toolchain-nrf5.cmake
